fix(style): improve spacing and border-radius consistency

--- a/static/styles/post.css
+++ b/static/styles/post.css
@@ -18,7 +18,6 @@ li {
 	font-size: var(--font-text-1);
     line-height: var(--size-line-height);
 	color: var(--color-foreground-1);
-	margin-top: var(--size-paragraph-separation);
 }
 
 code {
@@ -26,13 +25,13 @@ code {
 	font-size: var(--font-text-2);
     background-color: var(--color-background-2);
     color: var(--color-foreground-3);
-    padding: 2px 4px;
-    border-radius: var(--size-border-radius);
+    padding: 2px 4px 2px 4px;
+    border-radius: 5px;
 }
 
 pre {
+    padding: 1rem;
     background-color: var(--color-background-2);
-    padding: 1rem 2rem 1rem 2rem;
     border-radius: var(--size-border-radius);
     white-space: pre-wrap;
     word-wrap: break-word;
@@ -70,7 +69,6 @@ hr {
 	position: relative;
     overflow-x: auto;
     background-color: var(--color-background-2);
-	line-height: var(--size-line-height);
     border-radius: var(--size-border-radius);
 }
 
